@@ -58,15 +58,16 @@ static GIOChannel *pipe_write_ioc = NULL;
 
 static gboolean have_consume_idler = FALSE;
 
-void 
+static void 
 gam_dnotify_data_debug (gpointer key, gpointer value, gpointer user_data)
 {
+    int deactivated;
     DNotifyData *data = (DNotifyData *)value;
 
     if (!data)
         return;
 
-    int deactivated = data->fd == -1 ? 1 : 0;
+    deactivated = data->fd == -1 ? 1 : 0;
 
     GAM_DEBUG(DEBUG_INFO, "dsub fd %d refs %d busy %d deactivated %d: %s\n", data->fd, data->refcount, data->busy, deactivated, data->path);
 }
